--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "plain",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "/src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "Lukas Knecht",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.11"
   }
 }
